# libiridium

./: CMakeLists.txt  iridium.pc.in
examples/directip/receiver/: CMakeLists.txt  main.cpp
examples/directip/sender/: CMakeLists.txt  main.cpp
examples/modem/: arm-linux-gnueabihf.cmake
examples/modem/receiver/: CMakeLists.txt  LockFile.cpp  LockFile.hpp  main.cpp
examples/modem/sender/: CMakeLists.txt  iridium-send.sh  main.cpp
examples/modem/stat/: CMakeLists.txt  main.cpp
include/iridium/: Codec.hpp  IEMoConfirmation.hpp  IEMoHeader.hpp  IEMoLocationInfo.hpp  IEMoPayload.hpp  IEMtConfirmationMsg.hpp  IEMtHeader.hpp  IEMtPayload.hpp  IEMtPriority.hpp  IncomingSbdSession.hpp  InformationElement.hpp  JobUnitQueue.hpp  Message.hpp  Modem.hpp  SbdReceiver.hpp  SbdTransmitter.hpp
src/: Codec.cpp  IEMoConfirmation.cpp  IEMoHeader.cpp  IEMoLocationInfo.cpp  IEMoPayload.cpp  IEMtConfirmationMsg.cpp  IEMtHeader.cpp  IEMtPayload.cpp  IEMtPriority.cpp  IncomingSbdSession.cpp  InformationElement.cpp  Message.cpp  Modem.cpp  SbdReceiver.cpp  SbdTransmitter.cpp
